--- a/BaltaStore.Api/BaltaStore.Api.csproj
+++ b/BaltaStore.Api/BaltaStore.Api.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BaltaStore.Domain\BaltaStore.Domain.csproj" />
+    <ProjectReference Include="..\BaltaStore.Infra\BaltaStore.Infra.csproj" />
+    <ProjectReference Include="..\BaltaStore.Shared\BaltaStore.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
