--- a/BaltaStore.Domain/BaltaStore.Domain.csproj
+++ b/BaltaStore.Domain/BaltaStore.Domain.csproj
@@ -5,7 +5,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="StoreContext\Commands\CustomerCommands\NewFolder\**" />
+    <EmbeddedResource Remove="StoreContext\Commands\CustomerCommands\NewFolder\**" />
+    <None Remove="StoreContext\Commands\CustomerCommands\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidator" Version="2.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BaltaStore.Shared\BaltaStore.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="StoreContext\Commands\CustomerCommands\Outputs\CreateCustomerCommandResult.cs">
+      <ExcludedFromBuild>false</ExcludedFromBuild>
+    </Compile>
   </ItemGroup>
 
 </Project>
